--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -83,10 +83,6 @@
       margin-left: auto;
       margin-right: auto;
     }
-
-    .h1 {
-      @apply tw-text-xl;
-    }
   }
 
   @screen lg {
@@ -111,14 +107,15 @@
     }
 
     .h1 {
-      @apply tw-text-xl10;
+      @apply tw-text-xl;
     }
 
     .xl-separator::after {
       content: "";
       position: absolute;
       width: 1px;
-      background: theme('colors.dark');
+      background: theme('colors.dark-line');
+      opacity: 0.15;
       height: 100%;
       left: calc(50% - 78px);
       top: 0;
