--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -9,6 +9,7 @@
 @layer base {
   body {
     line-height: 1.4;
+    letter-spacing: -0.02em;
     @apply tw-font-arial tw-text-sm tw-text-secondary;
   }
 }
