--- a/src/assets/fonts/stolz/styles.css
+++ b/src/assets/fonts/stolz/styles.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'stolz';
-  src: url('./Stolzl-Regular.woff2'),
-  url('./Stolzl-Regular.woff');
+  src: url('./Stolzl-Book.woff2'),
+  url('./Stolzl-Book.woff');
   font-weight: 400;
   font-style: normal;
 }
